[package]
name = "actix-webtask-svc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^1.3.0", features = ["v4"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "^0.24.0"
env_logger = "0.10.0"
log = "^0.4"
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
derive_more = "^0.99.17"
